# OOP

./: Practice_1.sln
Practice_1/: 4372_Максимов_№3.rar  Practice_1.vcxproj  Practice_1.vcxproj.filters  application.cpp  application.h  array.cpp  array.h  complex.cpp  complex.h  main.cpp  polinom.cpp  polinom.h
client/: CMakeLists.txt
client/src/: array.h  main.cpp  mainwindow.cpp  mainwindow.h  polynom.h  udpclient.cpp  udpclient.h
server/: CMakeLists.txt
server/src/: array.h  complex.h  main.cpp  polynom.h  udpserver.cpp  udpserver.h
